--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start": "node ./bin/app.js",
+    "dev": "ts-node ./src/app.ts"
+  },
   "dependencies": {
-    "axios": "^0.26.0"
+    "@types/node": "^17.0.18",
+    "axios": "^0.26.0",
+    "typescript": "^4.5.5"
+  },
+  "name": "charge-fetcher",
+  "version": "1.0.0",
+  "main": "app.js",
+  "repository": "https://github.com/skontan/charge-fetcher.git",
+  "author": "Skontan <skontan@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "ts-node": "^10.5.0"
   }
 }
