--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "tsc",
+    "build": "yarn && tsc",
     "start": "node ./bin/app.js",
     "dev": "ts-node ./src/app.ts"
   },
