--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/node": "^17.0.18",
     "axios": "^0.26.0",
+    "express": "^4.17.3",
     "typescript": "^4.5.5"
   },
   "name": "charge-fetcher",
